技术关卡记录

--- a/其他/面试.md
+++ b/其他/面试.md
@@ -4,3 +4,36 @@
 
 cookie是一小段存储在浏览器端端文本数据，**大小不超过4 Kb**，有一个名称和一个值，还有几个可选端属性组成、包括有效期、安全性、使用范围等，有些网站采用session 机制来识别用户身份，通常也会将session ID存储在cookie 中，发送网络请求到时候，cookie 会在请求头里一起发送给服务器端
 
+## 2.支付宝支付
+
+### 2.1 异步回调通知失败怎么办?(掉单)
+
+意思就是可能我们程序的异步回调的接口名写错了或者怎么样,那么这个时候我们需要通过订单号去支付宝查询这笔支付状态
+
+### 2.2 如果用户支付成功,但是平台订单超时了,怎么处理?
+
+就有一种情况就是用户在支付宝付款界面还没输入密码,但是此时订单在后台界面已经超时了,那么解决办法就是:在超时订单里对已经超时了订单调用支付宝的关单接口,这样用户即使在输入密码后订单也已经关闭了,那么钱也会退回的!
+
+### 2.3 你们使用了支付宝的哪些接口
+
+1.支付接口 2.关闭订单接口 3.退款接口 4.交易查询(根据订单号查询某笔交易状态) 5.账单下载接口(财务对账)
+
+### 2.4 下载支付流程讲一下
+
+1. 首先用户点击购买商品,然后确认商品和订单地址是否正确。
+2. 然后提交到我们后台进行处理,首先是保存对应的业务订单表和用户支付宝支付配置信息的支付表，并且将订单动态加入到订单超时任务类中，对于订单超时任务的处理逻辑！
+3. 返回给订单号给前端，前端同时将订单号参数一并请求到后台支付业务接口中
+4. 配置拉起支付宝支付接口所需要的参数信息，返回一个支付界面的HTML
+5. 然后返回给前端页面展示
+6. 用户登录支付宝进行付款
+7. 这时就会异步回调和同步回调，异步回调调用我们业务接口用于处理订单相关的业务逻辑，同步回调跳转到前台支付成功界面！
+8. 而在异步回调里面，主要是根据支付状态来进行修改支付单和业务单的状态，最终支付失败那么购买的商品也要进行一个退库存！
+
+### 2.5 订单的状态，支付的状态，退款的状态
+
+1. 订单状态：下单成功待支付、支付成功、支付失败、支付超时（自动超时）、用户取消
+2. 支付状态：支付中、支付成功、支付超时、支付失败
+3. 退款状态：删除成功或取消、申请中、退款中、已退款、拒绝退款、申诉成功退款；
+
+退款状态用户在发起退款的时候万一它因为个人原因就可以取消掉退款，并且用户对拒绝退款的理由不满意那么它可以发起第二次退款那么这就是申诉退款！
+
