--- a/其他/项目二所用技术.md
+++ b/其他/项目二所用技术.md
@@ -295,7 +295,7 @@ live-server --port=80
 
 
 
-**结合自己业务中登录的流程的理解**：首先当用户点击微信登录按钮此时会发起一个链接请求到第三方服务提供商，服务提供商会根据请求过来的qppid返回一个授权二维码，然后用户扫码进行选择是否授权，而如果用户一旦授权那么第三方服务提供商进行重定向到本机项目中的回调页面然后返回一个授权码；此时我们拿到授权码后发起后端请求携带授权码到后端进行进一步的操作，在后端里通过携带过来的授权码和appid和struct向服务器申请令牌(token),然后第三方提供商就会对客户端携带的数据进行认证待确认无误后就会发放令牌token,而我们拿到token此时就已经进入到OAuth中定义的客户端与服务端之间的"授权层",在授权层里我们根据收到的令牌向服务器申请相关资源,而我们在后台服务器里通过拿到token(令牌)我们就能获取到用户的个人信息!然后进行相关的业务操作!
+**结合自己业务中登录的流程的理解**：首先当用户点击微信登录按钮此时会发起一个链接请求到第三方服务提供商，服务提供商会根据请求过来的qppid返回一个授权二维码，然后用户扫码进行选择是否授权，而如果用户一旦授权那么第三方服务提供商进行重定向到本机项目中的回调页面然后返回一个授权码（code）；此时我们拿到授权码后发起后端请求携带授权码到后端进行进一步的操作，在后端里通过携带过来的授权码和appid和struct向服务器申请令牌(token),然后第三方提供商就会对客户端携带的数据进行认证待确认无误后就会发放令牌token,而我们拿到token此时就已经进入到OAuth中定义的客户端与服务端之间的"授权层",在授权层里我们根据收到的令牌向服务器申请相关资源,而我们在后台服务器里通过拿到token(令牌)我们就能获取到用户的个人信息!然后进行相关的业务操作!
 
 当获取到token之后,同时拿到oppenid,我们要知道oppenid是唯一的凭证所以就可以先去微信用户表中查询是否存在该用户,存在判断是否绑定用户id,如果都满足,直接免密登录将用户个人信息放入redis缓存中,而如果获取不到数据那么就会把token令牌和oppenid携带返回给前端,前端拿到之后跳转到绑定手机号界面,通过将手机号和token令牌和oppenid一起携带到后端接口,进行对数据库表的新增!
 
