--- a/ElasticSearch/课堂笔记.md
+++ b/ElasticSearch/课堂笔记.md
@@ -659,6 +659,12 @@ ES在没有配置Mapping的情况下新增文档，ES会尝试对字段类型进
     <artifactId>log4j-core</artifactId>
     <version>2.7</version>
 </dependency>
+<dependency>
+    <groupId>org.elasticsearch</groupId>
+    <artifactId>elasticsearch</artifactId>
+    <version>5.5.1</version>
+    <scope>test</scope>
+</dependency>
 ```
 
  创建连接:
@@ -675,4 +681,94 @@ TransportClient client = new PreBuiltTransportClient(settings).addTransportAddre
 ```java
 IndexResponse response = client.prepareIndex("crm", "vip", "1").setSource(jsonDataText).get();
 ```
+
+![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/wpsF60C.tmp.jpg)
+
+> 获取文档
+
+```java
+GetResponse response = client.prepareGet("crm", "vip", "1").get();
+```
+
+![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/wps7CA2.tmp.jpg)
+
+> 更新文档
+
+```java
+client.prepareUpdate("crm", "vip", "1").setDoc("{\"sex\":0}").get();
+或client.prepareUpdate("crm", "vip", "1")
+    .setScript(new Script("ctx._source.sex = 1"  , ScriptService.ScriptType.INLINE,null, null))     
+    .get();
+java API也支持使用 upsert。如果文档还不存在，会根据 upsert内容创建一个新的索引。
+--不用上面的代码 ，使用下面的代码 
+IndexRequest indexRequest = new IndexRequest("crm", "vip", "1").source(originalJsonData);
+UpdateRequest updateRequest = new UpdateRequest("crm", "vip", "1").doc(updateJsonData).upsert(indexRequest);client.update(updateRequest).get();
+```
+
+![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/wpsBD27.tmp.jpg)
+
+> 删除文档
+
+```java
+DeleteResponse response = client.prepareDelete("crm", "vip", "1").get();
+```
+
+> 批量操作
+
+```java
+BulkRequestBuilder bulkRequest = client.prepareBulk();
+bulkRequest.add(client.prepareIndex("crm", "vip", "1")
+.setSource(vip1JsonData));
+bulkRequest.add(client.prepareIndex("crm", "vip", "2")
+.setSource(vip2JsonData));
+BulkResponse bulkResponse = bulkRequest.get();
+if (bulkResponse.hasFailures()) {
+	//处理错误
+}
+```
+
+![img](https://gitee.com/miawei/pic-go-img/raw/master/imgs/wpsEF79.tmp.jpg)
+
+> 搜索
+
+​	ES的查询是通过执行json格式的查询条件，在java中就是构造QueryBuilder对象，ES完全支持queryDSL风格的查询方式，QueryBuilder的构建类是QueryBuilders，filter的构建类是FilterBuilders。
+
+```java
+@Test
+    public void testDsl()throws Exception{
+
+        TransportClient client = getClient();
+        //prepareSearch
+        SearchRequestBuilder builder = client.prepareSearch(“crm”)
+                .setTypes(“blog”);//DSL过滤bool
+        BoolQueryBuilder boolQuery = QueryBuilders.boolQuery();
+
+           //must
+        List<QueryBuilder> must = boolQuery.must(); //query bool must
+        must.add(QueryBuilders.matchAllQuery()); //可以添加多个
+        //filter
+        boolQuery.filter(QueryBuilders.rangeQuery("age").gte(10).lte(50));//query bool filter
+        //query
+        builder.setQuery(boolQuery); //query bool
+        //排序
+        builder.addSort("age", SortOrder.ASC);
+        //分页
+        builder.setFrom(10).setSize(10);
+        //截取字段 
+        builder.setFetchSource(new String[]{"id","age"},null);
+        //展示内容
+        SearchResponse response = builder.get();
+
+        //获取总数
+        SearchHits hits = response.getHits(); //搜索出来东西都放到这个对象里面,里面包含总数+数据
+        System.out.println("总数:"+hits.totalHits());
+        //获取当前数据
+        SearchHit[] searchHits = hits.getHits();
+        for (SearchHit searchHit : searchHits) {
+            System.out.println(searchHit.getSource());
+        }
+    }
+```
+
+### 4.2 SpringBoot集成操作
 
