--- a/spring Boot/简述和相关原理.md
+++ b/spring Boot/简述和相关原理.md
@@ -1228,7 +1228,13 @@ Bean Validation 中内置的 constraint:
 </dependency>
 ```
 
+注意: 如果在校验类中接收的是对象那么就打`@Valid`,然后在这个对象里面再进行具体的校验,比如@NotNull!
 
+![image-20211123110919964](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211123110919964.png)
+
+> 如果要分组校验,那么可以参考这篇文章:https://www.cnblogs.com/wwjj4811/p/13806812.html
+>
+> 分组校验可理解为如:注册-这个对象可以为空 修改-这个对象不能为空,都是用的同一个对象那么这个就可以采用分组校验!
 
 ## 7.多环境切换
 
