添加树形结构

--- a/其他/常用.md
+++ b/其他/常用.md
@@ -68,3 +68,117 @@ public Map<String, Object> test(@RequestBody Map<String, Object> map) {
 没传json结构:前端传[1,2],那么后端就可以直接用List<Integer> aa就可以接收
 
 传json结构:前端传{[1,2]},那么后端就可以用@Requestbody List<Integer>来接收
+
+## 5.树形返回结构
+
+前端需要这样的一个结构:
+
+![image-20211126195756766](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211126195756766.png)
+
+然后数据库表字段:
+
+![image-20211126195830507](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211126195830507.png)
+
+其中pid表示父级的id;
+
+```java
+@Override
+    public AjaxResult getTreeData() {
+        //获取全部分类
+        List<CourseType> allTypes = selectList(null);
+        //返回分级分类
+        List<CourseType> resultTypes = new ArrayList<>();
+
+        //循环
+        for (CourseType courseType : allTypes) {
+            if (Objects.isNull(courseType.getPid()) || courseType.getPid().compareTo(0L) == 0) {
+                //如果父节点是0或者null那么就认为这是一级菜单
+                resultTypes.add(courseType);
+            }else{
+                //遍历全部分类
+                for (CourseType type : allTypes) {
+                    //如果当前父级id等同于父级的id
+                    if (courseType.getPid().compareTo(type.getId()) == 0) {
+                        //那么就将该子菜单添加进父级菜单的Children里,而记住allTypes修改了那么外面的循环也是循环的这个list,都是只在一个List里面修改!
+                        //其他的非底层（2，3，4，100）只需要找各自的上一层，
+                        type.getChildren().add(courseType);
+                        break;
+                    }
+                }
+            }
+        }
+        return AjaxResult.me().setResultObj(resultTypes);
+    }
+//理解:
+//首先获取全部数据,然后创建一个用于返回的树形结构,然后循环全部数据,
+//1.判断当前对象的pid是否等于0,如果满足这个条件那么认为这是第一层
+//2.如果第一层判断条件不满足那么:
+	//2.1循环全部数据,判断找出当前对象的pid等于上一层的id
+	//2.2找到之后就把当前对象放入到上一层的子对象中!
+	//2.3注意这里操作的始终都是同一个对象而已,可以理解为这是在进行重排序!
+	//2.3由于这是双循环,所以当添加进去就直接break停止,避免造成多余的循环以致浪费性能
+
+//其核心理解为就是在判断当前的pid去找上一层的id,那么只管找到然后放入即可,其他的就不需要考虑,这种就有点像小蝌蚪找妈妈,我只需找到上一层即可以拼接出完整的一条树形多级菜单!
+```
+
+理解:在第二个循环的过程中可以把它理解为这是数据库表中的自联表,把一个表想象成为两张表,一张为子级表一张为父级表!
+
+这样的好处就在于无论你有多少级的菜单都可以这样循环获取!
+
+第二种做法:
+
+```java
+/**
+     * 获取树性数据
+     *
+     * @return {@link AjaxResult}
+     */
+
+public AjaxResult getTreeDataFromDB() {
+    //获取全部分类
+    List<CourseType> allTypes = selectList(null);
+    //通过stream流的形式转换成Map结构
+    Map<Long, CourseType> parentMap = allTypes.stream().collect(Collectors.toMap(CourseType::getId, courseType -> courseType));
+
+    System.out.println(allTypes.get(0) == parentMap.get(1037L));//打印为true,表示这个流只是用于映射而已,其中对象的地址都是一样的!
+
+    //返回分级分类
+    List<CourseType> resultTypes = new ArrayList<>();
+
+    //循环
+    for (CourseType courseType : allTypes) {
+        if (Objects.isNull(courseType.getPid()) || courseType.getPid().compareTo(0L) == 0) {
+            //如果父节点是0或者null那么就认为这是一级菜单
+            resultTypes.add(courseType);
+        } else {
+            //                //遍历全部分类
+            //                for (CourseType type : allTypes) {
+            //                    //如果当前父级id等同于父级id
+            //                    if (courseType.getPid().compareTo(type.getId()) == 0) {
+            //                        type.getChildren().add(courseType);
+            //                        break;
+            //                    }
+            //                }
+            
+            //通过当前的父级的id去找到父级id所在的对象
+            CourseType parameType = parentMap.get(courseType.getPid());
+            if (BeanUtil.isNotEmpty(parameType)) {
+                //将当前对象添加进该父对象的子菜单里面
+                parameType.getChildren().add(courseType);
+            }
+        }
+    }
+    return AjaxResult.me().setResultObj(resultTypes);
+}
+//理解: 这种跟上面的第一种做法是一样的,只不过这里是将原本的双重循环改为水平循环而已! 提高了查询效率!
+//1.将全部数据通过stream流的形式映射成Map结构,而这种结构中对象的地址跟之前全部数据中的地址都是一样的!
+//1.1.这里省略中间的判断步骤
+//1.2 将当前对象的pid去map中根据key找到对应的上一层对象
+//1.3 找到之后将当前对象添加进上一层对象的子对象中!
+//1.4 因为stream流这是映射转换,并不会生成新的对象,所以这里修改了map中的对象其实质还是修改了全部数据allTypes;
+//1.5 而allTypes中的对象又因为再循环中将对象添加进返回的resultTypes中,所以我们也能在返回的对象中可以看出全部的树形结构的菜单展示数据!
+```
+
+两种做法都可以,这种做法稍优一点,因为这是两个平行的for循环,性能较好!
+
+注意这里的流的转换只是转换映射而已,其中的CourseType的地址都是一样的!所以修改这个地址,那么resultTypes中对象的地址也是对应发生改变的!
