--- a/其他/记录.md
+++ b/其他/记录.md
@@ -354,3 +354,198 @@ router.beforeEach((to, from, next) => {
 
 **理解**:用户请求axios异步请求,首先会经过前置拦截器,从本地存储技术中拿取token并设置到请求头信息中,然后请求到后端,此时后端就有一个后端拦截器,会对请求信息中的token判断是否能从redis中获取到,如果可以拿到那么设置刷新过期时间30分钟,并放行请求,如果获取不到那么就直接拦截下来并返回给前端报没有权限的异常信息,然后前端返回请求就会经过一个后置拦截器,分析返回的请求中是否是后端拦截报的异常,如果是那么就定位跳转到指定登录界面,如果不是照常放行!
 
+## 5.Saas平台设计
+
+SaaS提供商为企业搭建信息化所需要的所有网络基础设施及软件、硬件运作平台，并负责所有前期的实施、后期的维护等一系列服务，企业无需购买软硬件、建设机房、招聘IT人员，即可通过互联网使用信息系统。就像打开自来水龙头就能用水一样，企业根据实际需要，从SaaS提供商租赁软件服务。
+
+![image-20211125111234693](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211125111234693.png)
+
+传统软件模式:
+
+开发公司开发的产品给客户安装, 然后客户需要自己安装服务器等等, 如果有问题那么就需要开发公司去专门派发人员去维护!
+
+缺点:人员成本高!维护麻烦!
+
+
+
+SaaS模式带来的问题：
+
+1. 软件面向的是多个客户企业的数据,数据量变大，比如达到上百万，千万数据：考虑做集群，分库，分表
+
+2. 不同客户企业的数据如何隔离
+
+3. 不同客户企业权限如何处理：需要考虑企业，套餐，角色，权限，资源
+
+### 5.1 Saas平台数据隔离
+
+```
+如何把不同的公司做数据库区分?
+```
+
+1. 独立数据库
+
+   即一个租户一个数据库，这种方案的用户数据隔离级别最高，安全性最好，但成本较高
+
+   1. 优点
+      为不同的租户提供独立的数据库，有助于简化数据模型的扩展设计，满足不同租户的独特需求；如果出现故障，恢复数据比较简单。
+
+   2. 缺点
+      增多了数据库的安装数量，随之带来维护成本和购置成本的增加。
+      这种方案与传统的一个客户、一套数据、一套部署类似，差别只在于软件统一部署在运营商那里。如果面对的是银行、医院等需要非常高数据隔离级别的租户，可以选择这种模式，提高租用的定价。如果定价较低，产品走低价路线，这种方案一般对运营商来说是无法承受的。
+
+   ![image-20211125111656133](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211125111656133.png)
+
+2. 共享数据库,隔离数据库架构
+
+   这是第二种方案，即多个或所有租户共享Database，但是每个租户一个Schema（也可叫做一个user）。
+
+      通过Schema做区分user
+   
+   1. 优点
+      为安全性要求较高的租户提供了一定程度的逻辑数据隔离，并不是完全隔离；每个数据库可支持更多的租户数量。
+   
+   2. 缺点
+      如果出现故障，数据恢复比较困难，因为恢复数据库将牵涉到其他租户的数据；
+      如果需要跨租户统计数据，存在一定困难。
+   
+   ![image-20211125111739901](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211125111739901.png)
+
+3.共享数据库，共享数据架构，使用外键区分数据
+
+​	这是第三种方案，即租户共享同一个Database、同一个Schema，共享表，但在表中增加TenantID多租户的数据字段。这是共享程度最高、隔离级别最低的模式。
+
+用外键区分数据库,都在一个数据库通过不同的表的外键来关联查找属于客户自己的数据;缺点：数据隔离不是很彻底
+
+	1. 优点
+		三种方案比较，第三种方案的维护和购置成本最低，允许每个数据库支持的租户数量最多。
+
+2. 缺点：
+   隔离级别最低，安全性最低，需要在设计开发时加大对安全的开发量；
+   数据备份和恢复最困难，需要逐表逐条备份和还原。
+   如果希望以最少的服务器为最多的租户提供服务，并且租户接受牺牲隔离级别换取降低成本，这种方案最适合。
+
+![image-20211125111923006](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211125111923006.png)
+
+查询不同的租户的数据的时候，需要增加条件：where tenant_id = 登录的租户ID
+
+
+
+4. 共亨数据库，共亨数据架构，不同的机构使用不同的表
+
+   不同的机构使用不同的表,表使用后缀进行区分如：t_employee_ali ， t_employee_tx
+
+   ![image-20211125111957356](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211125111957356.png)
+
+   使用mybatis拦截器来修改表名,   好处: 用占位符来替换表名 但是这样呢表也会随之增多
+
+## 6.优化的方案
+
+**从后端角度来说**:
+	1. 查询较多可以做redis
+		1.1 实时性要求不高:可以写一个定时任务如:一个小时就从数据库查询然后更新redis,而前端查询就可以直接从redis查询即可!
+		1.2 实时性要求高:保证redis和数据库的一致性那么可以使用某些框架去监听数据库日志文件的变化然后去更新redis,从而达到数据的一致性!或者每次修改数据库就立即删除、更新缓存！
+	2.如果前端发起一个请求,在这一个请求里要查询各种数据然后综合返回给前端,那么这种我们就可以使用jdk1.8新特性新开一个线程,达到一个异步的作用,然后最终合并在一起再返回给客户端,如实现Callable接口
+
+**从前端角度来说**:
+
+1. 我们可以使用js压缩技术将js进行压缩,然后从后台服务中返回!这样就减少网络传输中静态资源大小
+2. 由于每次加载前端都是首先从后台获取js等然后加载到前端页面,然后再发送异步请求到后台服务,那么这种呢我们可以把静态资源：html,js,css部署到Nginx , 减轻后台服务的压力，实现动静分离
+3.当然每次都从Nginx中获取静态资源也是属于一种网络开销的一种方式,而用户在不同地区访问这个页面那么就会在网络上走各种网络服务商到达Nginx然后返回,这样的方式比较缓慢,所以可以把静态资源放到专门的CDN缓存服务器，浏览器直接从CDN获取静态资源 ， CDN可以根据地区就近选择
+4. 还有一种方式就是将请求的数据渲染到一个HTML模板上,然后每次请求都是访问这个静态页面,那么这种每次加载都是加载这个html,效率也得到了提高!
+5. 滚动加载，鼠标往下滚动才去会去发请求加载！
+
+## 7.BitStatus(位状态)
+
+![image-20211201192532483](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211201192532483.png)
+
+位状态呢指在一个表中有多种状态,而且随着项目的发展这些状态要随之增加,那么按照我们传统的方式就用字段来表达,比如邮箱绑定就需要一个字段,而手机绑定也需要一个字段表示,而且这些往往只是用于表示是还是否的状态,那么我们可以采用一个位状态的方式!
+
+
+
+如Long的二进制表示为8个0,那么每个状态占一个坑位,比如邮箱绑定就是第一个坑位,然后手机绑定占第二个坑位,那么如果用户绑定了手机认证那么就执行位操作,就好比是加法,然后计算得出新的二进制然后放进数据库,如果用户取消手机绑定那么就直接减去该状态所对应的二进制,通常这种状态都有一个约定成俗的规定,如:邮箱绑定就对应这5,那么在执行位操作的时候就会将5换算成二进制然后进行相关的运算!
+
+工具类:
+
+```java
+/**
+ * 用户状态类，记录用户在平台使用系统中所有的状态。
+ * @author nixianhua
+ */
+public class BitStatesUtils {
+	
+	/**
+	 * 用户注册成功的标示,及为默认初始状态
+	 */
+	public final static long OP_REGISTED = 1L << 0;
+	/**
+	 * 是否已激活（认证手机或认证邮箱）。
+	 */
+	public final static long OP_ACTIVED = 1L << 1;
+	/**
+	 * 是否锁定（未锁定则没有该状态），安全监测程序/后台对用户的锁定操作。
+	 */
+	public final static long OP_LOCKED = 1L << 2;
+	/**
+	 * 是否手机认证
+	 */
+	public final static long OP_AUTHED_PHONE = 1L << 3;
+	/**
+	 * 是否邮箱认证
+	 */
+	public final static long OP_AUTHED_EMAIL = 1L << 4;
+	
+	/**
+	 * 是否完善个人信息
+	 */
+	public final static long OP_SAVE_BASIC_INFO = 1L << 5;
+	
+	/**
+	 * 是否正在进行实名认证
+	 */
+	public final static long OP_IDENTITY_AUTHING = 1L << 6;
+	
+	/**
+	 * 是否完成实名认证
+	 */
+	public final static long OP_IDENTITY_AUTHED = 1L << 7;
+	/**
+	 * 是否初始化支付密码
+	 */
+	public final static long OP_INIT_PAY_PASSWORD = 1L << 8;
+	
+	/**
+	 * @param states 用户当前状态值
+	 * @param value  需要判断状态值
+	 * @return 是否存在
+	 */
+	public static boolean hasState(long states,long value){
+		return (states & value) == value;
+	}
+	
+	/**
+	 * @param states 已有状态值
+	 * @param value  需要添加状态值
+	 * @return 新的状态值
+	 */
+	public static long addState(long states,long value){
+		if(hasState(states, value)){
+			return states;
+		}
+		return (states | value);
+	}
+	
+	/**
+	 * @param states 已有状态值
+	 * @param value  需要删除状态值
+	 * @return 新的状态值
+	 */
+	public static long removeState(long states,long value){
+		if(!hasState(states, value)){
+			return states;
+		}
+		return states ^ value;
+	}
+	
+}
+```
+
