前端慢加载

--- a/其他/前端记录.md
+++ b/其他/前端记录.md
@@ -23,8 +23,59 @@ this.$confirm('确认删除选中记录吗？', '提示', {
      }).catch(() => {
 		//.....
      });
+//获取列表中某一行的数据
+<el-table-column label="操作" width="150">
+    <template scope="scope">
+        <el-button size="small" @click="edit(scope.row)">编辑</el-button>
+		<el-button type="danger" size="small" @click="del(scope.row)">删除</el-button>
+	</template>
+</el-table-column>
+//重置表单
+this.$refs['tenantForm'].resetFields();
 -------------------------------------------------需要搭配router路由进行一起搭配------------------------------------------------------------------------------
 //让当前路径跳转到指定路由
 this.$router.push({ path: '/echarts' });
+```
+
+工具:
+
+```javascript
+生成uuid:
+getUUID() {
+      var s = [];
+      var hexDigits = "0123456789abcdef";
+      for (var i = 0; i < 36; i++) {
+        s[i] = hexDigits.substr(Math.floor(Math.random() * 0x10), 1);
+      }
+      s[14] = "4"; // bits 12-15 of the time_hi_and_version field to 0010
+      s[19] = hexDigits.substr((s[19] & 0x3) | 0x8, 1); // bits 6-7 of the clock_seq_hi_and_reserved to 01
+      s[8] = s[13] = s[18] = s[23] = "-";
+      var uuid = s.join("");
+      return uuid;
+}
+同步执行:
+async beforeUpload() {
+     await this.$http.get("/file/oss/sign").then(response => {
+     }
+}
+                                                 
+```
+
+慢加载图片:
+
+```javascript
+<script type="text/javascript">
+    $().ready(function() {
+    $.cartbox.count = "0";
+    // 缓载图片
+    $("img").lazyload({
+        skip_invisible: false,
+        effect: 'fadeIn',
+        failure_limit: 20,
+        threshold: 200
+    });
+
+});
+</script>
 ```
 
