--- a/其他/项目三所用技术.md
+++ b/其他/项目三所用技术.md
@@ -296,3 +296,582 @@
       ```
 
    > 代码生成后就可以直接使用了
+   
+   这是生成之后需要的配置:
+   
+   1. 指定分页插件和扫描指定接口:
+   
+      ```java
+      package cn.miao.config;
+      
+      import com.baomidou.mybatisplus.plugins.PaginationInterceptor;
+      import org.mybatis.spring.annotation.MapperScan;
+      import org.springframework.context.annotation.Bean;
+      import org.springframework.context.annotation.Configuration;
+      import org.springframework.transaction.annotation.EnableTransactionManagement;
+      
+      //指定这是springBoot的配置类
+      @Configuration
+      @MapperScan("cn.miao.hrm.mapper") //mapper接口扫描
+      @EnableTransactionManagement  //事务管理
+      public class MybatisPlusConfig {
+      
+          /**
+           * 分页插件
+           */
+          @Bean
+          public PaginationInterceptor paginationInterceptor() {
+              return new PaginationInterceptor();
+          }
+      }
+      ```
+   
+   2. yml添加扫描mapper路径:
+   
+      ```yml
+      spring:
+        application:
+          name: service-system #服务的名字
+        # 连接数据库
+        datasource:
+          username: root
+          password: root
+          url: jdbc:mysql://localhost:3306/hrm-system?userUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+          driver-class-name: com.mysql.jdbc.Driver
+          type: com.alibaba.druid.pool.DruidDataSource
+      #集成MyBatis-Plus
+      mybatis-plus:
+        mapper-locations: classpath:cn/miao/hrm/mapper/*Mapper.xml  # 指定mapper的路径
+        #type-aliases-package: cn.itsource.hrm.domain,cn.itsource.hrm.query
+      
+      # mybatis整合SQL打印配置日志
+      logging:
+        level:
+          cn.miao: debug
+          org.springframework: warn
+      ```
+   
+      具体代码在:https://gitee.com/miawei/springcloud-hrm
+
+
+
+## 2.oss
+
+oss是阿里云的一款产品是用于存储文件的!
+
+这种分布式文件存储我们之前也遇到过就是fastdfs,那么我们回想为什么要去进行文件的统一处理:
+
+```
+最传统的的文件管理方案是把文件存储到项目中本地 “/webapp/upload/”，把文件的地址保存到数据库，客户端获取到图片的地址就可以浏览或者下载文件。这种管理方式是把文件交给应用本身来处理，文件不仅要占用应用服务器的空间资源，文件的读取以及把文件响应给客户端给应用服务器也带来很大的压力，并且在分布式/集群环境中存在文件不共享的问题。
+```
+
+![image-20211125135901420](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211125135901420.png)
+
+而采用微服务的分布式文件处理方案:
+
+```
+在分布式/集群环境中需要采用统一的文件处理方案，文件不需要应用本身来管理，而是交给专门的文件服务器来实现文件的上传，下载以及删除操作，这样的好处是应用服务器不再处理图片压力减轻，图片不会占用应用服务器本身的空间资源，并且同意的文件服务器实现的文件的共享。所有的微服务都可以通过文件服务器来上传和下载文件
+```
+
+
+
+具体的oss安装开通步骤,在这个博客:https://blog.csdn.net/u014494148/article/details/108858360
+
+具体项目集成oss:
+
+![腾讯课堂图片20211123143428](https://gitee.com/miawei/pic-go-img/raw/master/imgs/%E8%85%BE%E8%AE%AF%E8%AF%BE%E5%A0%82%E5%9B%BE%E7%89%8720211123143428.jpg)
+
+1. 上传方案
+
+   通常情况下把文件上传到OSS有三种方案
+
+   1. 通过web前端直接上传到OSS服务器，这种方式意味着需要把OSS配置参数写死在JS中，有安全隐患
+
+   2. 通过web前端把文件上传到后端服务器，后端服务器再把文件上传到OSS，这种方式虽然没有了暴露OSS配置参数的安全隐患，但是文件通过后端中转了一次在上传，性能不高，而且增加了服务的压力
+
+   3. OSS最佳实践：后端服务签名后前端直传，即：依然是web前端直接把文件上传到OSS服务器，只是在上传文件之前先请求后端获取OSS配置签名信息，web前端拿到签名信息后和文件一起上传到OSS服务器，这样一来，文件上传既不需要通过后台服务器中转一次，也不会有暴露OSS配置参数的风险。流程如下：
+
+![image-20211125140434041](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211125140434041.png)
+
+总结:文件上传方式，3种上传模式
+
+1. 浏览器直接传
+2. 浏览器上传到文件中心处理之后 再上传文件服务器
+3. 微服务中 也可以通过Feign来上传到文件中心再上传到文件服务器
+
+要考虑到文件上传调用涉及到的网络开销！如果文件是1G那么在网络开销是非常恐怖的
+
+> 实战
+
+1. 导入依赖:
+
+   ```xml-dtd
+   <!--        1.导入依赖-->
+   <dependency>
+       <groupId>com.aliyun.oss</groupId>
+       <artifactId>aliyun-sdk-oss</artifactId>
+       <version>3.10.2</version>
+   </dependency>
+   ```
+
+2. 参数配置:
+
+   ```yaml
+   file:
+     alicloud:
+       bucket-name: itsource-hrm #上传空间bucket
+       access-key: LTAI4GBU4kV67teSKSzkKpxN #你的key
+       secret-key: 0f9Djm2Ypds2mMBOma7iuInLqlbJL9 #你的秘钥
+       endpoint: oss-cn-chengdu.aliyuncs.com  #上传端点
+   ```
+
+3. 获取yml配置:
+
+   ```java
+   @Component
+   @Data
+   @ConfigurationProperties("file.alicloud")
+   public class AlicloudOSSProperties {
+       private String bucketName;
+       private String accessKey;
+       private String secretKey;
+       private String endpoint;
+   }
+   ```
+
+4. 生成密文交给浏览器
+
+   这里就不贴代码;
+   直接贴官方文档地址:https://help.aliyun.com/document_detail/31926.html
+
+   先通过后台对账号进行加密成密文 然后返回给客户端，然后客户端拿到密文再将文件进行上传到OOS服务！
+
+5. 前端上传
+
+   ```javascript
+   <el-upload
+           class="upload-demo"
+           action="http://itsource-hrm.oss-cn-chengdu.aliyuncs.com"
+           :data="uploadData"
+           :before-upload="beforeUpload"
+           :on-success="handleSuccess"
+           :file-list="fileList"
+           list-type="picture">
+     <el-button size="small" type="primary">点击上传</el-button>
+     <div slot="tip" class="el-upload__tip">只能上传jpg/png文件，且不超过500kb</div>
+   </el-upload>
+   
+   export default {
+       data() {
+           return {
+               uploadData: {  //提交到OSS的参数
+                 policy: '',
+                 signature: '',
+                 key: '',
+                 ossaccessKeyId: '',
+                 dir: '',
+                 host: ''
+               }
+           };
+       },
+       methods: {
+         getUUID() {
+           var s = [];
+           var hexDigits = "0123456789abcdef";
+           for (var i = 0; i < 36; i++) {
+             s[i] = hexDigits.substr(Math.floor(Math.random() * 0x10), 1);
+           }
+           s[14] = "4"; // bits 12-15 of the time_hi_and_version field to 0010
+           s[19] = hexDigits.substr((s[19] & 0x3) | 0x8, 1); // bits 6-7 of the clock_seq_hi_and_reserved to 01
+           s[8] = s[13] = s[18] = s[23] = "-";
+           var uuid = s.join("");
+           return uuid;
+         },
+         async beforeUpload(){
+           await this.$http.get("/file/oss/sign").then(response=>{
+                   //设置相关的参数
+                 var resultObj = response.data.resultObj;
+                 alert(this.uploadData.policy);
+                 this.uploadData.policy = resultObj.policy;
+                 alert(this.uploadData.policy);
+   
+                 this.uploadData.signature = resultObj.signature;
+                 this.uploadData.ossaccessKeyId = resultObj.accessid;
+                     //上传的文件名，使用UUID处理一下
+                 this.uploadData.key = resultObj.dir + '/'+this.getUUID()+'_${filename}';
+                 this.uploadData.dir = resultObj.dir;
+                 this.uploadData.host = resultObj.host;
+              });
+         },
+         handleSuccess(res, file) {
+           this.fileList.pop();
+           //上传的完整的文件地址
+           var urlPath = this.uploadData.host + '/' + this.uploadData.key.replace("${filename}",file.name) ;
+           this.employee.logo = urlPath;
+           this.$message({message: '上传成功，图片地址：'+this.employee.logo, type: 'success' });
+         },
+         handleRemove(file, fileList) {
+           
+         },
+         handlePreview(file) {
+           
+         }
+   }
+   ```
+
+6. 下载文件
+
+   这里就不做了,留一篇文章,需要时再来看:
+
+   https://blog.csdn.net/qq_36542090/article/details/82381173
+
+   https://help.aliyun.com/document_detail/84824.html
+
+   下载文件需要先通过OSS官网下载到本地,然后通过读取本地以流的形式输出到浏览器端
+
+7. 删除文件
+
+   同样这里给一个地址,使用都是非常简单:https://help.aliyun.com/document_detail/84842.html
+
+## 3.SpringCache(缓存)
+
+**概念**:
+
+通常将数据从数据库中同步一份到内存中，客户端直接从内存中查询数据，减少了和数据库的交互次数，提高查询性能（内存读写很快），减轻数据库的压力!
+
+**哪些数据适合做缓存:**
+
+1. 经常查询的热点数据
+2. 不经常变的数据(数据变化会导致缓存中的数据跟着变，如果比较频繁，性能开销比较大)
+
+> 传统缓存方案的优缺点
+
+1. 在集群环境中，每个应用都有一个本地缓存，当缓存发生修改会造成缓存不同步问题
+
+2. 本地缓存本身要占用应用的内存空间
+
+![image-20211201140230395](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211201140230395.png)
+
+分布式缓存方案:
+
+![image-20211201140303837](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211201140303837.png)
+
+> 集成redis
+
+1. 导入依赖
+
+```xml
+<!--整合Redis , 底层可以用jedis-->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-redis</artifactId>
+    <exclusions>
+        <exclusion>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </exclusion>
+    </exclusions>
+</dependency>
+
+<dependency>
+    <groupId>redis.clients</groupId>
+    <artifactId>jedis</artifactId>
+</dependency>
+```
+
+2. 配置redis
+
+```yaml
+spring:
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: 123456
+    jedis:
+      pool:
+        max-wait: 2000ms
+        min-idle: 2
+        max-idle: 8
+```
+
+3. 序列化配置
+
+```java
+//缓存的配置
+@Configuration
+public class CacheConfig extends CachingConfigurerSupport {
+
+    @Resource
+    private RedisConnectionFactory factory;
+
+    /**
+     * 自定义生成redis-key ， 类名.方法名
+     * @return
+     */
+    @Override
+    @Bean
+    public KeyGenerator keyGenerator() {
+        return (o, method, objects) -> {
+            StringBuilder sb = new StringBuilder();
+            sb.append(o.getClass().getName()).append(".");
+            sb.append(method.getName()).append(".");
+            for (Object obj : objects) {
+                sb.append(obj.toString());
+            }
+            return sb.toString();
+        };
+    }
+
+    //使用JSON进行序列化
+    @Bean
+    public RedisTemplate<Object, Object> redisTemplate() {
+        RedisTemplate<Object, Object> redisTemplate = new RedisTemplate<>();
+        redisTemplate.setConnectionFactory(factory);
+        //JSON格式序列化
+        GenericJackson2JsonRedisSerializer genericJackson2JsonRedisSerializer = new GenericJackson2JsonRedisSerializer();
+         //key的序列化
+        redisTemplate.setKeySerializer(genericJackson2JsonRedisSerializer);
+        //value的序列化
+        redisTemplate.setValueSerializer(genericJackson2JsonRedisSerializer);
+        //hash结构key的虚拟化
+        redisTemplate.setHashKeySerializer(new StringRedisSerializer());
+        //hash结构value的虚拟化
+        redisTemplate.setHashValueSerializer(genericJackson2JsonRedisSerializer);
+        return redisTemplate;
+    }
+
+    @Bean
+    @Override
+    public CacheResolver cacheResolver() {
+        return new SimpleCacheResolver(cacheManager());
+    }
+
+    @Bean
+    @Override
+    public CacheErrorHandler errorHandler() {
+        // 用于捕获从Cache中进行CRUD时的异常的回调处理器。
+        return new SimpleCacheErrorHandler();
+    }
+    //缓存管理器
+    @Bean
+    @Override
+    public CacheManager cacheManager() {
+        RedisCacheConfiguration cacheConfiguration = RedisCacheConfiguration.defaultCacheConfig()
+                        .disableCachingNullValues() //不允许空值
+                        .serializeValuesWith(RedisSerializationContext.SerializationPair
+                        .fromSerializer(new GenericJackson2JsonRedisSerializer()));//值使用JSON虚拟化
+        return RedisCacheManager.builder(factory).cacheDefaults(cacheConfiguration).build();
+    }
+} 
+```
+
+> 使用SpringCache实现缓存
+
+对于缓存声明，Spring的缓存提供了一组java注解:
+
+1. @Cacheable:触发缓存写入。
+
+2. @CacheEvict:触发缓存清除。
+
+3. @CachePut:更新缓存(不会影响到方法的运行)。
+
+4. @Caching:重新组合要应用于方法的多个缓存操作。
+
+@CacheConfig:设置类级别上共享的一些常见缓存设置
+
+--------
+
+1. 开启SpringCache
+
+   ```java
+   //缓存服务
+   @SpringBootApplication
+   @EnableCaching
+   public class CacheApplication {
+   
+       public static void main(String[] args) {
+           SpringApplication.run(CacheApplication.class) ;
+       }
+   }
+   ```
+
+2. 使用案例
+
+   ```java
+   查询:
+   @Override
+   @Cacheable(cacheNames = RedisConstants.KEY_COURSE_TYPE_TREE,key = "'ALL'")
+   public List<CourseType> treeData() {
+       log.debug("从数据库查询课程分类..........................");
+       return treeDataMethodThree();
+   }
+   
+   删除:
+   @Override
+   @CacheEvict(cacheNames = RedisConstants.KEY_COURSE_TYPE_TREE,key = "'ALL'")
+   public boolean insert(CourseType entity) {
+       return super.insert(entity);
+   }
+   @Override
+   @CacheEvict(cacheNames = RedisConstants.KEY_COURSE_TYPE_TREE,key = "'ALL'")
+   public boolean deleteById(Serializable id) {
+       return super.deleteById(id);
+   }
+   @Override
+   @CacheEvict(cacheNames = RedisConstants.KEY_COURSE_TYPE_TREE,key = "'ALL'")
+   public boolean updateById(CourseType entity) {
+       return super.updateById(entity);
+   }
+   ```
+
+3. 笔记:
+
+   其中`cacheNames`含义是redis缓存的前缀!`key`就是指具体存放的名字,两者搭配使用具体在redis缓存中的实际的redis的key为: `cacheNames::key`
+
+   **注意**:key为spel表达式, 不能直接写字符串,应该这样: `"'xx'"` 中间要加一个单引号
+
+   比如:我存储的是@Cacheable(cacheNames = "prefix",key = "'treeData'"),那么在redis中的key就是prefix::treeData
+
+其他注解的理解:
+
+```java
+@Cacheable-打在方法上,表示将结果写入到缓存中! 下次进来会先从redis缓存中是否存在,如果有就不会走方法里面!
+    - 第一次进来会先走缓存查询,如果没有就走数据库查询,查询后再将数据写入到缓存中去!
+@CachePut -当前方法的结果值覆盖注解中的key所在的value进行覆盖!--更新一直都要调用!先调用完方法再将结果写入redis缓存!
+@CacheEvict--删除缓存 每次调用都会先走方法再走注解
+@Caching---组合注解 将其他注解一起按照顺序使用
+@CacheConfig   写在类上 做一些公用的操作!
+```
+
+详细描述:https://www.cnblogs.com/wenjunwei/p/10779450.html
+
+这里进行粘贴之前的:
+
+### @Cacheable
+
+@Cacheable可以用来进行缓存的写入，将结果存储在缓存中，以便于在后续调用的时候可以直接返回缓存中的值，而不必再执行实际的方法。 最简单的使用方式,注解名称=缓存名称,使用例子如下:
+
+```java
+@Cacheable(cacheNames="books",key="’book1’")
+public Book findBook(ISBN isbn) {...}
+```
+
+一个方法可以对应多个缓存名称，如下:
+
+```java
+@Cacheable(cacheNames={"books", "isbns"},key="’book1’")
+public Book findBook(ISBN isbn) {...}
+```
+
+@Cacheable的缓存名称是可以配置动态参数的，比如选择传入的参数,如下: (以下示例是使用SpEL声明,如果您不熟悉SpEL，可以阅读[Spring Expression Language](#expressions))
+
+```java
+@Cacheable(cacheNames="books", key="#isbn") //参数值作为Key
+public Book findBook(ISBN isbn, boolean checkWarehouse, boolean includeUsed)
+   
+@Cacheable(cacheNames="books", key="#isbn.rawNumber")
+public Book findBook(ISBN isbn, boolean checkWarehouse, boolean includeUsed)
+```
+
+@Cacheable还可以设置根据条件判断是否需要缓存
+
+- condition:取决于给定的参数是否满足条件
+
+- unless:取决于返回值是否满足条件
+
+以下是一个简单的例子:
+
+```java
+@Cacheable(cacheNames="book", condition="#name.length() < 32") 
+public Book findBook(String name)
+
+    @Cacheable(cacheNames="book",condition="#name.length()<32", unless="#result.hardback") 
+    public Book findBook(String name)
+```
+
+@Cacheable还可以设置:keyGenerator(指定key自动生成方法),cacheManager(指定使用的缓存管理),cacheResolver(指定使用缓存的解析器)等,这些参数比较适合全局设置
+
+### @CachePut
+
+@CachePut:当需要更新缓存而不干扰方法的运行时 ，可以使用该注解。也就是说，始终执行该方法，并将结果放入缓存(已经有缓存就更新缓存)，注解参数与@Cacheable相同。 以下是一个简单的例子:
+
+```java
+@CachePut(cacheNames="book", key="#isbn")
+public Book updateBook(ISBN isbn, BookDescriptor descriptor) 
+```
+
+通常强烈建议不要对同一方法同时使用@CachePut和@Cacheable注解，因为它们具有不同的行为。可能会产生不可思议的BUG哦。
+
+### @CacheEvict 
+
+@CacheEvict:删除缓存的注解,这对删除旧的数据和无用的数据是非常有用的。这里还多了一个参数(allEntries),设置allEntries=true时，可以对整个条目进行批量删除。 以下是个简单的例子:
+
+```java
+   @CacheEvict(cacheNames="books") 
+    public void loadBooks(InputStream batch)
+   
+    //对cacheNames进行批量删除
+    @CacheEvict(cacheNames="books", allEntries=true) 
+    public void loadBooks(InputStream batch)
+```
+
+### @Caching
+
+@Caching:在使用缓存的时候，有可能会同时进行更新和删除，会出现同时使用多个注解的情况.而@Caching可以实现。 以下是个简单的例子：
+
+```java
+    @Caching(evict = { @CacheEvict("primary"), @CacheEvict(cacheNames="secondary", key="#p0") })
+    public Book importBooks(String deposit, Date date) 
+```
+
+### @CacheConfig
+
+@CacheConfig:缓存提供了许多的注解选项，但是有一些公用的操作，我们可以使用@CacheConfig在类上进行全局设置。 以下是个简单的例子：
+
+```java
+@CacheConfig(cacheName="books") 
+    public class BookRepositoryImpl implements BookRepository {
+    
+        @Cacheable
+        public Book findBook(ISBN isbn) {...}
+    } 
+```
+
+可以共享缓存名称，统一配置KeyGenerator,CacheManager,CacheResolver
+
+
+
+### 例子
+
+```java
+@CacheConfig(cacheNames = "users")  //统一设置cacheNames，方法上可以不用设置了
+@Service
+public class RedisServiceImpl implements RedisService {
+
+    //把cacheNames和key组合编程Redis的key存储，如： “users::user1”
+    //@Cacheable(cacheNames = {"users"}, key = "'user1'")
+    //从参数中取值作为key ,如： “users::1”
+    @Cacheable(cacheNames = "users",key = "#id")
+    public MyUser findUser(Long id) {
+        System.out.println("么有命中缓存...");
+        return new MyUser(id,"zs");
+    }
+    //把方法返回结果作为缓存的修改内容，匹配  “users::1” 缓存
+    //不建议把 @CachePut 和  @Cacheable 作用于同一个方法，功能冲突会出Bug
+    @CachePut(cacheNames = {"users"}, key = "#id")
+    public MyUser updateUser(Long id) {
+        System.out.println("修改User...");
+        return new MyUser(id,"ls");
+    }
+
+    //对cacheNames进行批量删除
+    //@CacheEvict(cacheNames="users", key = "#id") ,删除 "users::#id"
+    //对cacheNames进行批量删除 ，如： "users::2" ， "users::1"都会被删除
+    @CacheEvict(cacheNames="users", key = "#id",allEntries=true)
+    public void deleteUser(Long id) {
+        System.out.println("删除User...");
+    }
+}
+```
+
