--- a/其他/常用.md
+++ b/其他/常用.md
@@ -182,3 +182,23 @@ public AjaxResult getTreeDataFromDB() {
 两种做法都可以,这种做法稍优一点,因为这是两个平行的for循环,性能较好!
 
 注意这里的流的转换只是转换映射而已,其中的CourseType的地址都是一样的!所以修改这个地址,那么resultTypes中对象的地址也是对应发生改变的!
+
+## 6.hutool中between
+
+这里记录时间差中的字段顺序及返回问题
+
+格式:`DateUtil.between(date,dateTime, DateUnit.MINUTE,false)`
+
+//其中最后一个参数是是否保持绝对值 false:不要
+
+```java
+//起始
+Date date = new Date();
+//截止
+DateTime dateTime = DateUtil.offsetMinute(date, 1);
+//小<大  正数
+System.out.println(DateUtil.between(date,dateTime, DateUnit.MINUTE,false));  //1 
+//大<小  负数
+System.out.println(DateUtil.between(dateTime,date, DateUnit.MINUTE,false));  //-1
+```
+
