--- a/其他/记录.md
+++ b/其他/记录.md
@@ -549,3 +549,15 @@ public class BitStatesUtils {
 }
 ```
 
+
+
+## 8.记录一些需求
+
+1. 图片验证码
+
+   ![image-20211204181657252](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211204181657252.png)
+
+2. 短信验证码
+
+   ![image-20211204181946721](https://gitee.com/miawei/pic-go-img/raw/master/imgs/image-20211204181946721.png)
+
